normes

Norme: ./include/filler.h
Error (line 35): comment not well placed
Error (line 35): comment not well formatted
Error (line 38): comment not well placed
Error (line 38): comment not well formatted
Error (line 41): line has 83 characters
Error (line 41): comment not well placed
Error (line 41): comment not well formatted
Error (line 46): comment not well placed
Error (line 46): comment not well formatted
Error (line 49): comment not well placed
Error (line 49): comment not well formatted
Error (line 53): comment not well placed
Error (line 53): comment not well formatted
Error (line 66): comment not well placed
Error (line 66): comment not well formatted
Error (line 77): line has 96 characters
Error (line 78): line has 94 characters
Error (line 79): line has 90 characters
Error (line 82): line has 87 characters

Norme: ./src/count_delta.c
Norme: ./libft/libft.h
Norme: ./libft/get_next_line_fl.c
Error: file must end with a single empty line
Error: 42 header not at top of the file
Error: global scope bad aligned
Error (line 56): Space before function name
Error (line 63): line has 83 characters
Error (line 69): Empty line
Error (line 71): must begin only by tabulations
Error (line 74): Space before function name
Error (line 77, col 5): bad spacing
Error (line 78, col 4): bad spacing
Error (line 90): C++ comment
Error (line 95, col 3): missing space after break
Error (line 99, col 0): no newline after block
Norme: ./src/alg.c
Error (line 22): comment not well placed
Error (line 22): comment not well formatted
Error (line 23): comment not well placed
Error (line 23): comment not well formatted
Error (line 28): comment not well placed
Error (line 28): comment not well formatted
Error (line 39): placement_alg_heatmap_handle have 5 parameters
Error (line 42): comment not well placed
Error (line 42): comment not well formatted
Error (line 42): bad indentation
Error (line 50): comment not well placed
Error (line 50): comment not well formatted
Error (line 67): placement_alg_heatmap have 5 parameters
Error (line 99): comment not well placed
Error (line 99): comment not well formatted
Norme: ./src/create_hot_map.c
Error (line 15): create_hot_board_handle_players_player have 5 parameters
Error (line 29): create_hot_board_handle_players_enemy have 5 parameters
Error (line 39): create_hot_board_handle_players have 5 parameters
Error (line 57): create_hot_board_handle have 5 parameters
Error (line 67): 2 assignations
Norme: ./src/create_hot_map_aux.c
Error (line 15): take_care_of_yourself_not_first_iter have 5 parameters
Error (line 15): Space before function name
Error (line 16): must begin only by tabulations
Error (line 18): must begin only by tabulations
Error (line 18): bad indentation
Error (line 19): must begin only by tabulations
Error (line 19): bad indentation
Error (line 20): must begin only by tabulations
Error (line 20): bad indentation
Error (line 21): must begin only by tabulations
Error (line 22): must begin only by tabulations
Error (line 22): bad indentation
Error (line 23): must begin only by tabulations
Error (line 24): must begin only by tabulations
Error (line 24): bad indentation
Error (line 25): must begin only by tabulations
Error (line 25): bad indentation
Error (line 26): must begin only by tabulations
Error (line 26): bad indentation
Error (line 27): must begin only by tabulations
Error (line 27): bad indentation
Error (line 28): must begin only by tabulations
Error (line 28): bad indentation
Error (line 28): spaces at the end of line
Error (line 28, col 4): no newline after block
Error (line 31): Space before function name
Error (line 31): declarations must be followed by one empty line in take_care_of_yourself
Error (line 37): spaces at the end of line
Error (line 50): must begin only by tabulations
Error (line 50): bad indentation
Error (line 51): must begin only by tabulations
Error (line 51): bad indentation
Error (line 52): must begin only by tabulations
Error (line 52): bad indentation
Error (line 53): must begin only by tabulations
Error (line 54): spaces at the end of line
Error (line 54, col 1): no newline after block
Norme: ./src/hot_map_catch_next.c
Error (line 15): catch_next_handle have 5 parameters
Error (line 15): line has 82 characters
Error (line 37): catch_next have 5 parameters
Norme: ./src/init_part.c
Error: file must end with a single empty line
Error (line 58, col 3): missing space after break
Error (line 72): Empty line
Error (line 75, col 0): no newline after block
Norme: ./src/filler.c
Norme: ./src/make_decision_part.c
Error (line 15): piece_get_placement_handle have 5 parameters
Error (line 29): line has 83 characters
Error (line 44): missing newline after if
Error (line 44): C++ comment
Norme: ./src/piece_calc.c
Error (line 15): piece_calc_points_handle have 5 parameters
Norme: ./src/get.c
Error (line 60): comment not well placed
Error (line 60): comment not well formatted
Error (line 102): comment not well placed
Error (line 102): comment not well formatted







/////////////////////////////////////////////////////////////////////////////////////////////
e1r4p9% make
🦄 compiling a project "filler" for you Mac
src/filler.c:76:13: error: variable 'initial' is uninitialized when used here [-Werror,-Wuninitialized]
        char    board[initial->x_plateau][initial->y_plateau];
                      ^~~~~~~
src/filler.c:74:17: note: initialize the variable 'initial' to silence this warning
        t_init  *initial;
                        ^
                         = NULL
1 error generated.
make: *** [all] Error 1
